opam-version: "2.0"
synopsis: "QubesOS firewall ruleset handling library"
maintainer:   "team@robur.io"
authors:      ["Robur.coop"]
homepage:     "https://github.com/roburio/ocaml-pf"
bug-reports:  "https://github.com/roburio/ocaml-pf/issues"
dev-repo:     "git+https://github.com/roburio/ocaml-pf.git"
license:      "AGPL-3"
tags: "org:mirage"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "dune"  { build }
  "ocaml" { build & >= "4.07.0" }
  "cstruct"   { >= "3.3.0" }
  "angstrom"  { >= "0.12.1" }
  "fmt"       { >= "0.8.4" }
  "logs"      { >= "0.6.2" }
  "rresult"   { >= "0.5.0" }
  "uri"       { >= "1.9.5" }
  "ipaddr"    { >= "2.8.0" }
  "bisect_ppx" { >= "1.4.1" }
  "alcotest" { with-test }
  "afl-persistent" { with-test }
]
