opam-version: "1.2"
maintainer:   "noreply@example.com"
authors:      ["Joe Hill"]
homepage:     "https://github.com/cfcs/ocaml-pf"
bug-reports:  "https://github.com/cfcs/ocaml-pf/issues"
dev-repo:     "https://github.com/cfcs/ocaml-pf.git"
license:      "gopher://license.to.chill"
tags: "org:mirage"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "dune"  {build & >= "1.0"}
  "cstruct"   { >= "3.2.0" & < "3.3.0" }
  "angstrom"  { >= "0.7.0" & < "0.8.0" }
  "fmt"       { >= "0.8.4" & < "0.9.0" }
  "logs"      { >= "0.6.2" & < "0.7.0" }
  "rresult"   { >= "0.5.0" & < "0.6.0" }
  "uri"       { >= "1.9.5" & < "2.0.0" }
  "ipaddr"    { >= "2.8.0" & < "2.9.0" }
]
available: [ocaml-version >= "4.04.2"]
