(executables
 (names alcotest_parse fuzz)
 (public_names - -)
 (libraries pf alcotest logs.fmt))

(alias
 (name runtest)
 (deps alcotest_parse.exe)
 (action
  (progn
   (run ./alcotest_parse.exe))))

(alias
 (name fuzz)
 (deps fuzz.exe input/in output/lo)
 (action
  (progn
   (run afl-fuzz -i input/ -o output/ ./fuzz.exe))))
