(executables
 (names alcotest_parse fuzz)
 (public_names - -)
 (libraries pf alcotest alcotest-unix logs.fmt afl-persistent))

(alias
 (name runtest)
 (deps alcotest_parse.exe)
 (action
  (progn
   (run ./alcotest_parse.exe))))

(alias
 (name fuzz)
 (deps fuzz.exe input/in input/dns input/ipv6 input/unimplemented output/lo)
 (action
  (progn
   (run afl-fuzz -i input/ -o output/ ./fuzz.exe))))
